cmake_minimum_required(VERSION 3.0.0)
project(OpenGLProject VERSION 0.1.0)
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin )
include(CTest)
enable_testing()
include_directories(${CMAKE_SOURCE_DIR}/include)
link_directories(${CMAKE_SOURCE_DIR}/lib)
add_executable(OpenGLProject main.cpp)
target_link_libraries(OpenGLProject mingw32 SDL2Main SDL2 glew32)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
